--- a/static/angular-app/login/login.html
+++ b/static/angular-app/login/login.html
@@ -1,7 +1,7 @@
 <h1>{{ vm.title }}</h1>
 <ul>
 	<li ng-repeat="user in vm.users">
-		<a href="#!/{{ user._id }}">
+		<a href="/{{ user._id }}">
 			{{ user.username }}
 		</a>
 	</li>
